Fixed testimonial icon alignment.

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -427,10 +427,8 @@ section h3.section-subheading {
     }
 }
 
-.testimonial-icon {
-  margin: 20px;
-  max-width: 150px;
-  max-height: 50px;
+.testimonial-icon div{
+  height: 70px
 }
 
 .case-flex-row {
